testsuite/tests/typecheck/should_fail/tcfail209.hs
{-# LANGUAGE Haskell2010 #-}
module FancyContextsWithoutExtension1 where

type Showish = Show

f :: (Showish a) => a -> a
f = undefined

